--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@ NEXT_PUBLIC_CLERK_SIGN_UP_URL=/sign-up
 NEXT_PUBLIC_CLERK_AFTER_SIGN_IN_URL=/
 NEXT_PUBLIC_CLERK_AFTER_SIGN_UP_URL=/
 MONGODB_URI="mongodb://Siddiq:Siddiq@ac-3u1omyb-shard-00-00.a4yklnv.mongodb.net:27017,ac-3u1omyb-shard-00-01.a4yklnv.mongodb.net:27017,ac-3u1omyb-shard-00-02.a4yklnv.mongodb.net:27017/Vocal?ssl=true&replicaSet=atlas-zyuw7g-shard-0&authSource=admin&retryWrites=true&w=majority"
+WEBHOOK_SECRET=whsec_+ERuGYbo8qdVV5pAFVqVR24pqKFTDJuB
