--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.1",
+    "axios": "^1.7.2",
     "firebase": "^10.12.3",
     "mongoose": "^8.0.3",
     "next": "14.0.4",
