--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.49.2",
+    "sonner": "^1.5.0",
     "svix": "^1.15.0"
   },
   "devDependencies": {
